tests/snapshots/config_fixtures__dlp_pattern_missing_regex.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 6, column 5
  |
6 |     { name = "test" },
  |     ^^^^^^^^^^^^^^^^^
missing field `regex`
